Target Java 8 to match the 1.12.2 era
- Drop compile target from Java 11 to 8
- Replace Java 9+ APIs: Path.of -> Paths.get, Set.of -> Collections.emptySet, var -> explicit types
- Update README build requirement and badge