@@ -3,7 +3,7 @@ package net.vibmc.server;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Properties;
 
 public class ServerConfig {
@@ -15,7 +15,7 @@ public class ServerConfig {
 
     public static ServerConfig load(String path) {
         Properties props = new Properties();
-        try (InputStream in = Files.newInputStream(Path.of(path))) {
+        try (InputStream in = Files.newInputStream(Paths.get(path))) {
             props.load(in);
         } catch (IOException e) {
             // Missing or unreadable config; defaults will be used.
